objects/SDO_SFS_Field_Capacity__c.object
<CustomObject>
    <description>What: Field Capacity object. Who: Laura Bode.</description>
    <fields>
        <fullName>Capacity_Date__c</fullName>
        <label>Capacity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID field used in data tool for data management</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forecasted_Capacity__c</fullName>
        <label>Forecasted Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Demand__c</fullName>
        <label>Forecasted Demand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Gap__c</fullName>
        <formula>Forecasted_Capacity__c - Forecasted_Demand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Field Capacity</relationshipLabel>
        <relationshipName>Field_Capacity</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Capacity</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Field Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Capacity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>